1) adjusted z-index 2) made sidenav and topbar fixed

--- a/css/content.css
+++ b/css/content.css
@@ -3,11 +3,13 @@
 
 .content {
     width: 100%;
-    min-height: var(--body-minheight);
+    min-height: 200vh;
+    margin-top: var(--topbar-height);
     margin-left: var(--body-margin-left);
     border-top: 5px solid var(--grey-500);
     border-left: 5px solid var(--grey-500);
-    border-top-left-radius: 10px;
+    /* border-top-left-radius: 10px; */
+    /* background-color: var(--grey-500); */
 }
 
 
